Fix Safari overflow

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -13,6 +13,10 @@
     overflow: hidden;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: "Space Grotesk", sans-serif;
     font-size: 18px;
